WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23979
AX: alt tag not returned for <input type="image">
https://bugs.webkit.org/show_bug.cgi?id=23979
Summary
AX: alt tag not returned for <input type="image">
chris fleizach
Reported
2009-02-16 13:21:22 PST
This is a generic problem where webkit does not properly return the name of a form control that has an image type.
Attachments
patch to return alt tag on input file type
(2.38 KB, patch)
2009-02-16 14:59 PST
,
chris fleizach
adele
: review+
Details
Formatted Diff
Diff
patch to return alt tag on input file type
(2.38 KB, patch)
2009-02-16 15:00 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch to return alt tag on input file type
(2.38 KB, patch)
2009-02-16 15:00 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-02-16 14:59:51 PST
Created
attachment 27711
[details]
patch to return alt tag on input file type
chris fleizach
Comment 2
2009-02-16 15:00:09 PST
Created
attachment 27713
[details]
patch to return alt tag on input file type
chris fleizach
Comment 3
2009-02-16 15:00:10 PST
Created
attachment 27714
[details]
patch to return alt tag on input file type
Mark Rowe (bdash)
Comment 4
2009-02-17 03:58:27 PST
This was landed in <
http://trac.webkit.org/changeset/41025
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug