Bug 23979: AX: alt tag not returned for <input type="image"> https://bugs.webkit.org/show_bug.cgi?id=23979

Canonical link: https://commits.webkit.org/33121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41025 268f45cc-cd09-0410-ab3c-d52691b4dbfc